# manusGlove

./: readme.md
camera_pose/: package.xml  setup.cfg  setup.py
camera_pose/camera_pose/: camera_publisher.py
camera_pose/camera_pose/CamData/: rgbd.json  rgbd_with_metal_thing.json
camera_pose/camera_pose/MarkerInfo/: MarkerInfo.json
camera_pose/camera_pose/scene_calibration/: scene_calibration.py
client_scripts/: manus_data_viz.py
manus_ros2/: .gitignore  CMakeLists.txt  Readme.md  package.xml
manus_ros2/client_scripts/: .gitignore  MJDATA.TXT  MJMODEL.TXT  MUJOCO_LOG.TXT  manus_data_viz.py  start_mujoco.py
manus_ros2/client_scripts/mink_repo/examples/: hand_shadow.py
manus_ros2/client_scripts/mink_repo/examples/shadow_hand/: keyframes.xml  left_hand.xml  scene_left.xml
manus_ros2/client_scripts/mujoco_menagerie/shadow_hand/: left_hand.xml  manus_demo.xml
manus_ros2/src/: ClientLogging.hpp  ClientPlatformSpecific.cpp  ClientPlatformSpecific.hpp  ClientPlatformSpecificTypes.hpp  SDKMinimalClient.cpp  SDKMinimalClient.hpp  rawdata_publisher.cpp
manus_ros2_msgs/: .gitignore  CMakeLists.txt  package.xml
manus_ros2_msgs/msg/: ManusNodeHierarchy.msg  ManusNodePoses.msg
